--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -14,6 +14,6 @@
     {% block content %}{% endblock content %}
 
     <script src="{% static '/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static '/js/script.js' %}"></script>
+    <script src="{% static '/js/scripts.js' %}"></script>
 </body>
 </html>
