--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!-- Material design bootstrap -->
     <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
+    <!-- DataTables.Net -->
+    <link rel="stylesheet" href="{% static 'css/addons/datatables.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/addons/datatables-select.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
@@ -30,12 +33,11 @@
     <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
     <!-- HTMX Script -->
     <script type="text/javascript" src="{% static 'js/htmx.min.js' %}"></script>
+    <!-- DataTables -->
+    <script type="text/javascript" src="{% static 'js/addons/datatables.min.js' %}"></script>
+    <!-- DataTables Select -->
+    <script type="text/javascript" src="{% static 'js/addons/datatables-select.min.js' %}"></script>
     <!-- Custom JavaScript -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
-    <script>
-        document.body.addEventListener('htmx:configRequest', (event) => {
-            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
-        });
-    </script>
 </body>
 </html>
