--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -7,36 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock title %}</title>
 
-    <!-- Font awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
-    <!-- Bootstrap 5 core -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Material design bootstrap -->
-    <link rel="stylesheet" href="{% static 'css/mdb.min.css' %}">
-    <!-- DataTables.Net -->
-    <link rel="stylesheet" href="{% static 'css/addons/datatables.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/addons/datatables-select.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
-<body class="fixed-sn white-skin">
+<body>
     {% block content %}{% endblock content %}
 
     <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="{% static 'js/mdb.min.js' %}"></script>
-    <!-- HTMX Script -->
-    <script type="text/javascript" src="{% static 'js/htmx.min.js' %}"></script>
-    <!-- DataTables -->
-    <script type="text/javascript" src="{% static 'js/addons/datatables.min.js' %}"></script>
-    <!-- DataTables Select -->
-    <script type="text/javascript" src="{% static 'js/addons/datatables-select.min.js' %}"></script>
     <!-- Custom JavaScript -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
