:sparkles: Installing AdminLTE static files

--- a/base_templates/base.html
+++ b/base_templates/base.html
@@ -10,6 +10,8 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
+    <!-- Admin LTE CSS -->
+    <link rel="stylesheet" href="{% static 'css/adminlte.min.css' %}">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
@@ -17,6 +19,8 @@
     {% block content %}{% endblock content %}
 
     <!-- SCRIPTS -->
+    <!-- Admin LTE scripts -->
+    <script src="{% static 'js/adminlte.min.js' %}"></script>
     <!-- Custom JavaScript -->
     <script type="text/javascript" src="{% static 'js/scripts.js' %}"></script>
 </body>
